<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:rowCount="2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:orientation="vertical"
        android:rowCount="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout>
            <TextView
                android:text="@string/lbColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbColor"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_alignBaseline="@+id/txR"
                android:layout_alignBottom="@+id/txR"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:hint="R"
                android:gravity="center"
                android:layout_toRightOf="@id/lbColor"
                android:id="@+id/txR" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:hint="G"
                android:gravity="center"
                android:id="@+id/txG"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/txR"
                android:layout_toEndOf="@+id/txR" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:hint="B"
                android:gravity="center"
                android:layout_toRightOf="@id/txG"
                android:id="@+id/txB"/>

        </RelativeLayout>
        <RelativeLayout>
            <TextView
                android:text="@string/lbEstilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbEstilo"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:textAlignment="center"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lbEstilo"
                android:id="@+id/spinnerEstilo" />

        </RelativeLayout>
        <RelativeLayout>
            <TextView
                android:text="@string/lbFigura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbFigura"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:textAlignment="center"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lbFigura"
                android:id="@+id/spinnerFigura" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent">
            <TextView
                android:text="@string/lbPos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbpos"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:textAlignment="center" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lbpos"
                android:id="@+id/spinnerPos" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:gravity="center"
                android:layout_toRightOf="@id/spinnerPos"
                android:id="@+id/txpos" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/botonAl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bAleatorio" />

            <Button
                android:text="@string/botonGen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/bAleatorio"
                android:id="@+id/bGenerar" />
           <Button
                android:text="@string/bokpos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/bGenerar"
                android:id="@+id/bOkPos" />
        </RelativeLayout>

    </GridLayout>

    <GridLayout
        android:orientation="vertical"
        android:rowCount="1"
        android:layout_width="match_parent"
        android:layout_height="286dp">
        <fragment
            android:layout_width="match_parent"
            android:layout_height="313dp"
            android:name="com.example.caxidy.ejemplodrawer.MiCanvas"
            android:id="@+id/fragmentoCanvas"
            tools:layout="@layout/canvas_layout" />
    </GridLayout>

</GridLayout>